--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv = "refresh" content = "1; url = https://www.youtube.com/@deadline2hari" />
-    <title>Tutorial!</title>
-</head>
-<body>
-    
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta http-equiv = "refresh" content = "2; url = home.html" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            Welcome To
+        </title>
+    </head>
+    <body>
+        <div class="opening">
+            <img src="JAGART 1.png" class="logo">
+            <div class="background"></div>
+        </div>
+    </body>
 </html>
